// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTourStep accepts an array of buttons in the footerAction prop 1`] = `
<div
  class="euiPopover euiPopover-isOpen emotion-euiPopover"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__anchor css-16vtueo-render"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left-euiTour"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -26px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      >
        <div
          class="euiBeacon euiTour__beacon emotion-euiBeacon-success-euiTourBeacon-isOpen-left"
          style="height: 12px; width: 12px;"
        />
      </div>
      <div>
        <div
          style="min-width: 300px; max-width: 600px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader emotion-euiPopoverTitle-m-m-euiTourHeader"
            id="generated-id"
          >
            <h2
              class="euiTitle emotion-euiTitle-xxs-euiTourHeader__title"
            >
              A demo
            </h2>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter emotion-euiPopoverFooter-m-euiTourFooter"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-l-flexEnd-center-row"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-wrap-s-flexEnd-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button>
                    Button 1
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button>
                    Button 2
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiTourStep can be closed 1`] = `
<div
  class="euiPopover emotion-euiPopover"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__anchor css-16vtueo-render"
  >
    <span>
      Test
    </span>
  </div>
</div>
`;

exports[`EuiTourStep can change the minWidth and maxWidth 1`] = `
<div
  class="euiPopover euiPopover-isOpen emotion-euiPopover"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__anchor css-16vtueo-render"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left-euiTour"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -26px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      >
        <div
          class="euiBeacon euiTour__beacon emotion-euiBeacon-success-euiTourBeacon-isOpen-left"
          style="height: 12px; width: 12px;"
        />
      </div>
      <div>
        <div
          style="min-width: 240px; max-width: 420px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader emotion-euiPopoverTitle-m-m-euiTourHeader"
            id="generated-id"
          >
            <h2
              class="euiTitle emotion-euiTitle-xxs-euiTourHeader__title"
            >
              A demo
            </h2>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter emotion-euiPopoverFooter-m-euiTourFooter"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-l-flexEnd-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--xSmall euiButtonEmpty--flushRight css-wvaqcf-empty-text"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Close tour
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiTourStep can have subtitle 1`] = `
<div
  class="euiPopover euiPopover-isOpen emotion-euiPopover"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__anchor css-16vtueo-render"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left-euiTour"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -26px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      >
        <div
          class="euiBeacon euiTour__beacon emotion-euiBeacon-success-euiTourBeacon-isOpen-left"
          style="height: 12px; width: 12px;"
        />
      </div>
      <div>
        <div
          style="min-width: 300px; max-width: 600px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader emotion-euiPopoverTitle-m-m-euiTourHeader"
            id="generated-id"
          >
            <h2
              class="euiTitle emotion-euiTitle-xxxs-euiTourHeader__subtitle"
            >
              Subtitle
            </h2>
            <h3
              class="euiTitle emotion-euiTitle-xxs-euiTourHeader__title"
            >
              A demo
            </h3>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter emotion-euiPopoverFooter-m-euiTourFooter"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-l-flexEnd-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--xSmall euiButtonEmpty--flushRight css-wvaqcf-empty-text"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Close tour
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiTourStep can override the footer action 1`] = `
<div
  class="euiPopover euiPopover-isOpen emotion-euiPopover"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__anchor css-16vtueo-render"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left-euiTour"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -26px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      >
        <div
          class="euiBeacon euiTour__beacon emotion-euiBeacon-success-euiTourBeacon-isOpen-left"
          style="height: 12px; width: 12px;"
        />
      </div>
      <div>
        <div
          style="min-width: 300px; max-width: 600px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader emotion-euiPopoverTitle-m-m-euiTourHeader"
            id="generated-id"
          >
            <h2
              class="euiTitle emotion-euiTitle-xxs-euiTourHeader__title"
            >
              A demo
            </h2>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter emotion-euiPopoverFooter-m-euiTourFooter"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-l-flexEnd-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <button>
                  Test
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiTourStep can turn off the beacon 1`] = `
<div
  class="euiPopover euiPopover-isOpen emotion-euiPopover"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__anchor css-16vtueo-render"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left-euiTour"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -16px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      />
      <div>
        <div
          style="min-width: 300px; max-width: 600px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader emotion-euiPopoverTitle-m-m-euiTourHeader"
            id="generated-id"
          >
            <h2
              class="euiTitle emotion-euiTitle-xxs-euiTourHeader__title"
            >
              A demo
            </h2>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter emotion-euiPopoverFooter-m-euiTourFooter"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-l-flexEnd-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--xSmall euiButtonEmpty--flushRight css-wvaqcf-empty-text"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Close tour
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiTourStep is rendered 1`] = `
<div
  class="euiPopover euiPopover-isOpen emotion-euiPopover"
  data-test-subj="test subject string"
>
  <div
    class="euiPopover__anchor css-16vtueo-render"
  >
    <span>
      Test
    </span>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <div
      aria-label="aria-label"
      aria-labelledby="generated-id"
      aria-live="assertive"
      aria-modal="true"
      class="euiPanel euiPanel--plain euiPanel--paddingMedium euiPopover__panel euiTour testClass1 testClass2 emotion-euiPanel-grow-m-m-plain-euiPopover__panel-isOpen-left-euiTour"
      data-popover-open="true"
      data-popover-panel="true"
      role="dialog"
      style="top: -22px; left: -26px; will-change: transform, opacity; z-index: 2000;"
    >
      <div
        class="euiPopover__arrow emotion-euiPopoverArrow-left"
        data-popover-arrow="left"
        style="left: 0px; top: 10px;"
      >
        <div
          class="euiBeacon euiTour__beacon emotion-euiBeacon-success-euiTourBeacon-isOpen-left"
          style="height: 12px; width: 12px;"
        />
      </div>
      <div>
        <div
          style="min-width: 300px; max-width: 600px;"
        >
          <div
            class="euiPopoverTitle euiTourHeader emotion-euiPopoverTitle-m-m-euiTourHeader"
            id="generated-id"
          >
            <h2
              class="euiTitle emotion-euiTitle-xxs-euiTourHeader__title"
            >
              A demo
            </h2>
          </div>
          <div
            class="euiTour__content"
          >
            You are here
          </div>
          <div
            class="euiPopoverFooter euiTourFooter emotion-euiPopoverFooter-m-euiTourFooter"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-l-flexEnd-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
              >
                <button
                  class="euiButtonEmpty euiButtonEmpty--xSmall euiButtonEmpty--flushRight css-wvaqcf-empty-text"
                  type="button"
                >
                  <span
                    class="euiButtonContent euiButtonEmpty__content"
                  >
                    <span
                      class="euiButtonEmpty__text"
                    >
                      Close tour
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;
